// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full service task configuration 1`] = `
Object {
  "clusterName": "my-cluster-name",
  "containerInsights": true,
  "cpu": 512,
  "environment": Object {
    "global": "variable",
  },
  "executionRoleArn": "arn:aws:iam::123456:role/my-custom-execution-role",
  "iamManagedPolicies": Array [
    "arn:aws:iam::aws:policy/my-managed-policy",
  ],
  "iamRoleStatements": Array [
    Object {
      "Action": Array [
        "resource:*",
      ],
      "Effect": "Allow",
      "Resource": "*",
    },
  ],
  "logGroupName": undefined,
  "memory": "1GB",
  "tags": Object {
    "global": "tag",
  },
  "taskRoleArn": "arn:aws:iam::123456:role/my-custom-task-role",
  "tasks": Array [
    Object {
      "command": Array [
        "command",
      ],
      "cpu": 1024,
      "entryPoint": Array [
        "entrypoint",
      ],
      "environment": Object {
        "global": "variable",
        "task": "variable",
      },
      "executionRoleArn": "arn:aws:iam::123456:role/my-custom-execution-role-for-task-1",
      "image": "my-image-1",
      "memory": "2GB",
      "name": "my-task-1",
      "service": Object {
        "containerPort": 5000,
        "desiredCount": 2,
        "hostPort": 5000,
        "loadBalancers": Array [
          Object {
            "ContainerName": "container-name",
            "ContainerPort": 5000,
            "TargetGroupArn": "target-group",
          },
        ],
        "maximumPercent": 100,
        "minimumHealthyPercent": 0,
        "spot": true,
      },
      "tags": Object {
        "global": "tag",
        "task": "tag",
      },
      "taskRoleArn": "arn:aws:iam::123456:role/my-custom-task-role-for-task-1",
      "vpc": Object {
        "assignPublicIp": true,
        "securityGroupIds": Array [
          "sg-5678",
        ],
        "subnetIds": Array [
          "subnet-5678",
        ],
      },
    },
    Object {
      "command": Array [],
      "cpu": 512,
      "entryPoint": Array [],
      "environment": Object {
        "global": "variable",
      },
      "executionRoleArn": "arn:aws:iam::123456:role/my-custom-execution-role",
      "image": "my-image-2",
      "memory": "1GB",
      "name": "task-2",
      "service": Object {
        "containerPort": undefined,
        "desiredCount": 1,
        "hostPort": undefined,
        "loadBalancers": Array [],
        "maximumPercent": 200,
        "minimumHealthyPercent": 100,
        "spot": false,
      },
      "tags": Object {
        "global": "tag",
      },
      "taskRoleArn": "arn:aws:iam::123456:role/my-custom-task-role",
      "vpc": Object {
        "assignPublicIp": false,
        "securityGroupIds": Array [
          "sg-1234",
        ],
        "subnetIds": Array [
          "subnet-1234",
        ],
      },
    },
  ],
  "vpc": Object {
    "assignPublicIp": false,
    "securityGroupIds": Array [
      "sg-1234",
    ],
    "subnetIds": Array [
      "subnet-1234",
    ],
  },
}
`;

exports[`minimal scheduled task configuration 1`] = `
Object {
  "clusterName": undefined,
  "containerInsights": undefined,
  "cpu": 256,
  "environment": Object {},
  "executionRoleArn": undefined,
  "iamManagedPolicies": Array [],
  "iamRoleStatements": Array [],
  "logGroupName": undefined,
  "memory": "0.5GB",
  "tags": Object {},
  "taskRoleArn": undefined,
  "tasks": Array [
    Object {
      "command": Array [],
      "cpu": 256,
      "entryPoint": Array [],
      "environment": Object {},
      "executionRoleArn": undefined,
      "image": "my-image",
      "memory": "0.5GB",
      "name": "my-task",
      "schedule": "rate(1 minute)",
      "tags": Object {},
      "taskRoleArn": undefined,
      "vpc": Object {
        "assignPublicIp": false,
        "securityGroupIds": Array [
          "sg-1234",
        ],
        "subnetIds": Array [
          "subnet-1234",
        ],
      },
    },
  ],
  "vpc": Object {
    "assignPublicIp": false,
    "securityGroupIds": Array [
      "sg-1234",
    ],
    "subnetIds": Array [
      "subnet-1234",
    ],
  },
}
`;

exports[`minimal service task configuration 1`] = `
Object {
  "clusterName": undefined,
  "containerInsights": undefined,
  "cpu": 256,
  "environment": Object {},
  "executionRoleArn": undefined,
  "iamManagedPolicies": Array [],
  "iamRoleStatements": Array [],
  "logGroupName": undefined,
  "memory": "0.5GB",
  "tags": Object {},
  "taskRoleArn": undefined,
  "tasks": Array [
    Object {
      "command": Array [],
      "cpu": 256,
      "entryPoint": Array [],
      "environment": Object {},
      "executionRoleArn": undefined,
      "image": "my-image",
      "memory": "0.5GB",
      "name": "my-task",
      "service": Object {
        "containerPort": undefined,
        "desiredCount": 1,
        "hostPort": undefined,
        "loadBalancers": Array [],
        "maximumPercent": 200,
        "minimumHealthyPercent": 100,
        "spot": false,
      },
      "tags": Object {},
      "taskRoleArn": undefined,
      "vpc": Object {
        "assignPublicIp": false,
        "securityGroupIds": Array [
          "sg-1234",
        ],
        "subnetIds": Array [
          "subnet-1234",
        ],
      },
    },
  ],
  "vpc": Object {
    "assignPublicIp": false,
    "securityGroupIds": Array [
      "sg-1234",
    ],
    "subnetIds": Array [
      "subnet-1234",
    ],
  },
}
`;
